--- a/styles/index.css
+++ b/styles/index.css
@@ -40,3 +40,21 @@
   align-content: center;
   font-size: larger;
 }
+
+.signupmodal{
+  height: 100%;
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.postbuttons
+{
+  position: absolute;
+  top: 50%;
+  bottom: 50%;
+  right: 50%;
+  left: 50%;
+  justify-content: center;
+  display: table;
+}
