--- a/styles/common.css
+++ b/styles/common.css
@@ -1,6 +1,6 @@
 body {
     background-image: url('../images/background.jpg');
-    background-repeat: no-repeat;
+    background-repeat: round;
     background-attachment: fixed;  
     background-size: cover;
 }
