index.html header moved to common.js same header referenced in all htmls PartC added removed bloglist

--- a/styles/common.css
+++ b/styles/common.css
@@ -1,52 +1,124 @@
-body {
-    background-image: url('../images/background.jpg');
-    background-repeat: round;
-    background-attachment: fixed;  
-    background-size: cover;
+#header-logo,
+#header-buttons {
+  display: inline-block;
 }
 
-#title{
-    font-family: 'Montez', cursive;
-    color: blue;
-    font-size: -webkit-xxx-large;
-    margin-left: 10px;
+#header-logo {
+  float: left;
+  margin-left: 10px;
 }
 
-#subheading{
-    font-family: 'Ubuntu Mono', monospace;
-    font-size: large;
-    margin-left: 10px;
+#header-buttons {
+  float: right;
+  margin-top: 10px;
+  margin-right: 10px;
 }
 
-.buttons-container{
-    display: block;
-    float: right;
-    padding-top: 30px;
-    padding-right: 10px;
+#header-logo #logo {
+  font-family: 'Montez', cursive;
+  color: blue;
+  font-size: 35px;
 }
 
-.logos-container{
-    display: block;
-    float: left;
-    padding-top: 13px;
+#header-subheading {
+  font: 'Ubuntu Mono';
+  font-size: 15px;
 }
 
-.logos{
-    margin: 0px;
+#header {
+  display: block;
 }
-.btn-primary{
-    background-color:blue;
-    border-color: black;
-    padding: 15px;
-    margin:10px;
+
+
+/* CSS for modal */
+
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+  font-family: Arial, Helvetica, sans-serif;
 }
-#allposts {
-    background-color: yellow;
-    padding: 5px;
-    margin: 5px;
+
+
+/* Modal Content */
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  margin-bottom: 40px;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%;
 }
-#createposts{
-    background-color: yellow;
-    padding: 5px;
-    margin: 5px;
+
+.model-heading {
+  display: inline-block;
+  padding-bottom: 5px;
+}
+
+.modal-content form {
+  margin-top: 15px;
+  position: relative;
+}
+
+
+/* The Close Button */
+
+.close {
+  color: #aaaaaa;
+  display: inline-block;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.btn-success {
+  width: 100%;
+}
+
+#sign-in-disclosure {
+  text-align: center;
+  padding-top: 5px;
+  font-size: 15px;
+}
+
+.posts-btn {
+  margin: auto;
+  padding: 10px;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+
+#create-post-modal .modal-content {
+  width: 85%;
+}
+
+.btn {
+  border-radius: 0px;
+  margin: 5px
 }
