--- a/styles/postslist.css
+++ b/styles/postslist.css
@@ -1,145 +1,166 @@
 body {
-  background-color: #ffeedd;
+  background: #ffeedd;
 }
 
-#title{
-  font-family: 'Montez', cursive;
-  color: blue;
-  font-size: -webkit-xxx-large;
-  margin-left: 10px;
+.post-card {
+  background-color: grey;
+  border-radius: 10px;
+  margin: 20px;
+  color: white;
+  width: 450px;
+  height: 200px;
+  display: flex;
+  flex-direction: row;
+  font-size: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
 }
 
-#subheading{
-  font-family: 'Ubuntu Mono', monospace;
-  font-size: large;
-  margin-left: 10px;
+.post-card:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+  /* 5px rounded corners */
 }
 
-.buttons-container{
-  display: block;
-  float: right;
-  padding-top: 30px;
-  padding-right: 10px;
+.post-block {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  position: relative;
+  top: 10px;
+  width: 100%;
 }
 
-.logos-container{
-  display: block;
+.post-author,
+.post-content {
+  margin: 0px 0px;
+  border-radius: inherit;
+  border-top-right-radius: 0px;
+  border-right: none;
+}
+
+.post-author {
   float: left;
-  padding-top: 13px;
+  background: white;
+  color: black;
+  flex: 10%;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
 }
 
-.logos{
-  margin: 0px;
-}
-.btn-primary{
-  background-color:blue;
-  border-color: black;
-  padding: 15px;
-  margin:10px;
-}
-#allposts {
-  background-color: yellow;
-  padding: 5px;
-  margin: 5px;
-}
-#createposts{
-  background-color: yellow;
-  padding: 5px;
-  margin: 5px;
-}
-
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-}
-
-/* The Close Button */
-.fas fa-times {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
+.post-author p {
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  position: relative;
+  transform: translate(-50%, -50%);
   font-weight: bold;
+  color: dimgrey;
+  font-size: 14px;
 }
 
-.fas fa-times:hover,
-.fas fa-times:focus {
-  color: #000;
-  text-decoration: none;
+.post-content {
+  float: right;
+  background: rgb(168, 164, 164);
+  color: black;
+  flex: 80%;
+  padding: 10px;
+  font-size: 12px;
+  border-radius: inherit;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+
+.content-heading {
+  font-weight: bold;
+  color: dimgrey;
+  font-size: 14px;
+  display: flex;
+  flex-direction: row;
+}
+
+.content-heading .heading {
+  text-align: justify;
+  font-weight: bolder;
+  flex: 97%;
+}
+
+.content-heading .heading-font {
+  text-align: right;
+  flex: 3%;
+}
+
+.content-text {
+  display: block;
+  margin-left: 0px;
+  text-align: justify;
+  position: relative;
+}
+
+i:hover {
   cursor: pointer;
 }
 
-.ModalHeader{
-  align-content: center;
-  font-size: larger;
+#confirmer-modal .modal-content {
+  width: 30%;
+  border: none;
 }
 
-/*.signupmodal{*/
-/*  height: 100%;*/
-/*  display:flex;*/
-/*  flex-direction: row;*/
-/*  justify-content: center;*/
-/*  align-items: center;*/
-/*}*/
-.postbuttons
-{
-  position: absolute;
-  top: 50%;
-  bottom: 50%;
-  right: 50%;
-  left: 50%;
-  justify-content: center;
-  display: table;
+.confirmer-action {
+  display: inline;
 }
 
-.submitSignupins{
-  background-color: green;
-  font-size: x-large;
+#confirmer-modal .btn {
+  width: 100px;
+  border-radius: 0px;
+  border: none;
 }
 
-
-.signforms{
-  justify-content: right;
-  flex-direction: column;
-  align-content: center;
-  align-items: normal;
-  display: flex;
+#confirmer-modal .left-btn {
+  float: left;
 }
 
-.labels{
-  font-size: larger;
+#confirmer-modal .right-btn {
+  float: right;
 }
 
-#redirect2signup{
-  text-align: center;
+#confirmer-modal .model-heading {
+  border: none;
 }
 
-.newpostform{
-  justify-content: right;
-  flex-direction: column;
-  align-content: center;
-  align-items: normal;
-  display: flex;
+@media only screen and (max-width: 1300px) {
+  .post-card {
+    width: 450px;
+    height: 200px;
+  }
 }
 
-#postslistdiv{
-position: fixed;
-margin: 200px;
+@media only screen and (max-width: 1000px) {
+  .post-card {
+    width: 300px;
+    height: 320px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .post-card {
+    width: 200px;
+    height: 420px;
+  }
+}
+
+@media only screen and (max-width: 670px) {
+  .post-card {
+    width: 180px;
+    height: 520px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .post-card {
+    width: 130px;
+    height: 520px;
+  }
 }
